--- a/charts/gqm/values.yaml
+++ b/charts/gqm/values.yaml
@@ -17,7 +17,7 @@ frontend:
   ingress:
     enabled: true
     host: ""
-    existingCertificate:
+    existingCertificate: ""
   resources: {}
 postgresql:
   global:
