fix(backend): add initContainer to wait for postgre to avoid CLB

--- a/charts/gqm/templates/backend/deployment.yaml
+++ b/charts/gqm/templates/backend/deployment.yaml
@@ -14,6 +14,10 @@ spec:
       labels: {{- include "common.labels.stable" $ | nindent 8 }}
         app.kubernetes.io/component: backend
     spec:
+      initContainers:
+        - name: postgres-ready-checker
+          image: busybox
+          command: ['sh', '-c', 'until nc -z -v -w30 {{ include "common.names.fullname" . }}-postgresql 5432; do echo "Waiting for PostgreSQL..."; sleep 5; done']
       containers:
         - name: backend
           image: {{ include "backend.image" . }}
