--- a/charts/gqm/templates/frontend/ingress.yaml
+++ b/charts/gqm/templates/frontend/ingress.yaml
@@ -9,14 +9,14 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   rules:
-    - host: {{ required "You must provide a host, when enabling ingress" .Values.backend.ingress.host | quote }}
+    - host: {{ required "You must provide a host, when enabling ingress" .Values.frontend.ingress.host | quote }}
       http:
         paths:
           - path: /
-            backend: {{- include "common.ingress.backend" (dict "serviceName" (printf "%s-backend" (include "common.names.fullname" .)) "servicePort" "http" "context" $) | nindent 14 }}
+            backend: {{- include "common.ingress.backend" (dict "serviceName" (printf "%s-frontend" (include "common.names.fullname" .)) "servicePort" "http" "context" $) | nindent 14 }}
             pathType: Prefix
   tls:
     - hosts:
-        - {{ required "You must provide a host, when enabling ingress" .Values.backend.ingress.host | quote }}
-      secretName: {{ include "common.secrets.name" (dict "existingSecret" .Values.backend.ingress.existingCertificate "defaultNameSuffix" "custom-certificate" "context" $) }}
+        - {{ required "You must provide a host, when enabling ingress" .Values.frontend.ingress.host | quote }}
+      secretName: {{ include "common.secrets.name" (dict "existingSecret" .Values.frontend.ingress.existingCertificate "defaultNameSuffix" "custom-certificate" "context" $) }}
 {{- end }}
