--- a/charts/gqm/Chart.yaml
+++ b/charts/gqm/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 description: HelmChart to deploy Goal Question Metrics System
 name: gqm-system
-version: 0.4.9
+version: 0.5.0
 home: "https://gqm.darkoro.org/"
 maintainers:
   - name: jpkraemer-mg
@@ -14,3 +14,4 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami
     version: 15.5.28
     alias: postgresql
+    condition: postgres.enabled
