--- a/charts/gqm/templates/backend/deployment.yaml
+++ b/charts/gqm/templates/backend/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.backend.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -41,3 +42,4 @@ spec:
             - containerPort: 8080
               name: http
           resources: {{- toYaml .Values.backend.resources | nindent 12 }}
+{{- end -}}
