--- a/charts/gqm/templates/frontend/deployment.yaml
+++ b/charts/gqm/templates/frontend/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.frontend.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -33,3 +34,4 @@ spec:
           args:
             - "-c"
             - "npm start"
+{{- end -}}
