--- a/charts/gqm/values.yaml
+++ b/charts/gqm/values.yaml
@@ -1,4 +1,5 @@
 backend:
+  enabled: false
   image:
     registry: docker.io
     repository: darkoro/gqm-backend
@@ -10,6 +11,7 @@ backend:
     existingCertificate: ""
   resources: {}
 frontend:
+  enabled: false
   image:
     registry: docker.io
     repository: darkoro/gqm-frontend
@@ -21,6 +23,7 @@ frontend:
   extraEnv:
   resources: {}
 postgresql:
+  enabled: false
   global:
     defaultStorageClass: ceph-rbd
   auth:
