fix(charts): update helm dependencies automatically

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,6 +35,7 @@ jobs:
         id: helm-repos
         run: |
           for DIR in ./charts/*; do
+            helm dependency update "$DIR"
             FILE="$DIR/Chart.yaml"
             DIR="${DIR//\./}"
             yq e '.dependencies.[].repository' "$FILE"
