--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,8 +37,10 @@ jobs:
           for DIR in ./charts/*; do
             helm dependency update "$DIR"
             FILE="$DIR/Chart.yaml"
-            DIR="${DIR//\./}"
-            yq e '.dependencies.[].repository' "$FILE"
+            DIR="${DIR/\./}"
+            if [[ -f "$FILE" ]]; then
+              yq e '.dependencies.[].repository' "$FILE" | sort -u | grep -E '^(http|https|oci)://' || echo "No valid repositories in $FILE"
+            fi
           done | sort -u | awk '{print NR " " $1}' | xargs -r -n 2 helm repo add
 
       - name: release
